# exam-data-agent

./: .gitignore  README.md  pyproject.toml
Claude-agent-design/docs/superpowers/plans/: 2026-03-26-exam-data-agent.md
Claude-agent-design/docs/superpowers/specs/: 2026-03-26-exam-data-agent-design.md
Claude-agent-design/exam-data-agent/: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  start.bat  wrangler.toml
Claude-agent-design/exam-data-agent/backend/: config.py  db.py  main.py  requirements.txt  sql_validator.py
Claude-agent-design/exam-data-agent/backend/data/: report_cache.json
Claude-agent-design/exam-data-agent/backend/prompts/: insight.txt  nl2sql.txt
Claude-agent-design/exam-data-agent/backend/services/: asr_proxy.py  chat.py  chat_stream.py  dataset_cache.py  dataset_router.py  debug.py  insight.py  query_cache.py  report.py  report_cache.py
Claude-agent-design/exam-data-agent/backend/sql_templates/: weekly_active.sql  weekly_behavior.sql  weekly_pay.sql  weekly_retention.sql  weekly_user_growth.sql
Claude-agent-design/exam-data-agent/docs/: startup-guide.md  项目级交接总览.md
Claude-agent-design/exam-data-agent/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Claude-agent-design/exam-data-agent/frontend/src/: App.tsx  (+3 more)
Claude-agent-design/exam-data-agent/scripts/: deploy.py  export_cache.py
app/: main.py
docs/superpowers/plans/: 2026-03-26-dingtalk-data-query-bot.md
docs/superpowers/specs/: 2026-03-26-dingtalk-data-query-bot-design.md
tests/: test_smoke.py
(+44 files in other folders)
