[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dingtalk-data-query-bot"
version = "0.1.0"
description = "DingTalk natural-language data query bot with dashboard workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dingtalk-stream>=0.22",
  "openai>=1.75.0",
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlglot>=25.0",
  "pandas>=2.2",
  "xlrd>=2.0",
  "fastapi>=0.115",
  "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.26",
  "respx>=0.21",
  "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
